--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1></h1>
+    <div class="guess-game"></div>
+        <div class="game-area">
+            <div class="inputs"></div>
+            <div class="control">
+                <button class="check">Check word</button>
+                <button class="hint"><span></span> Hint</button>
+            </div>
+            <div class="message"></div>
+        </div>
+            <div class="key-colors">
+                <h2>Key colors</h2>
+                <div class="key-color"></div>
+                    <div class="key"></div>
+                    <div class="key-text"></div>
+            </div>
+
 </body>
 </html>
