--- a/index.html
+++ b/index.html
@@ -18,10 +18,19 @@
         </div>
             <div class="key-colors">
                 <h2>Key colors</h2>
-                <div class="key-color"></div>
-                    <div class="key"></div>
-                    <div class="key-text"></div>
+                <div class="key-color">
+                    <div class="key in-place"></div>
+                    <div class="key-text">Letter is correct and in place</div>
+                </div>
+                <div class="key-color">
+                    <div class="key not-in-place"></div>
+                    <div class="key-text">Letter is correct but not in place</div>
+                </div>
+                <div class="key-color">
+                    <div class="key no"></div>
+                    <div class="key-text">Letter is wrong</div>
+                </div>
             </div>
-
+        <footer></footer>
 </body>
 </html>
