--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="guess.css">
 </head>
 <body>
     <h1></h1>
@@ -32,5 +33,6 @@
                 </div>
             </div>
         <footer></footer>
+        <script src="guess.js"></script>
 </body>
 </html>
