--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1></h1>
-    <div class="guess-game"></div>
+    <div class="guess-game">
         <div class="game-area">
             <div class="inputs"></div>
             <div class="control">
@@ -17,22 +17,23 @@
             </div>
             <div class="message"></div>
         </div>
-            <div class="key-colors">
-                <h2>Key colors</h2>
-                <div class="key-color">
-                    <div class="key in-place"></div>
-                    <div class="key-text">Letter is correct and in place</div>
-                </div>
-                <div class="key-color">
-                    <div class="key not-in-place"></div>
-                    <div class="key-text">Letter is correct but not in place</div>
-                </div>
-                <div class="key-color">
-                    <div class="key no"></div>
-                    <div class="key-text">Letter is wrong</div>
-                </div>
+        <div class="key-colors">
+            <h2>Key colors</h2>
+            <div class="key-color">
+                <div class="key in-place"></div>
+                <div class="key-text">Letter is correct and in place</div>
             </div>
-        <footer></footer>
-        <script src="guess.js"></script>
+            <div class="key-color">
+                <div class="key not-in-place"></div>
+                <div class="key-text">Letter is correct but not in place</div>
+            </div>
+            <div class="key-color">
+                <div class="key no"></div>
+                <div class="key-text">Letter is wrong</div>
+            </div>
+        </div>
+    </div>
+    <footer></footer>
+    <script src="guess.js"></script>
 </body>
 </html>
